<resources>
    <string name="app_name">Eo App</string>
    <string name="otheracti">boutton$</string>
    <string name="menu">Kaoha nui</string>
    <string name="Retour">a hua i hope</string>
    <string name="te_tau_vaitini">Te Tau Vaitini</string>
    <string name="te_tau_vaitinitxt">Te tau Vaitini</string>
    <string name="nombrestxt">Nombres</string>
    <string name="formestxt">Formes</string>
    <string name="carre">Carre</string>
    <string name="rectangleuh">Rectangle</string>
    <string name="cercle">Cercle</string>
    <string name="cacs">cacs</string>
    <string name="Red">Button</string>
    <string name="rouge">Rouge</string>
    <string name="vert">Vert</string>
    <string name="rose">Rose</string>
    <string name="blanc">Blanc</string>
    <string name="noir">Noir</string>
    <string name="orange">Orange</string>
    <string name="marron">Marron</string>
    <string name="bleu">Bleu</string>
    <string name="mauve">Mauve</string>
    <string name="gris">Gris</string>
    <string name="jaune">Jaune</string>
    <string name="_3_poisson">3 poisson</string>
    <string name="_4_fleur">4 fleur</string>
    <string name="_2_mangue">2 mangue</string>
    <string name="_5_oiseaux">5 oiseaux</string>
    <string name="_6_pierres">6 pierres</string>
    <string name="_7_feuille">7 feuille</string>
    <string name="_8_femme">8 femme</string>
    <string name="_1_chien">1 chien</string>
    <string name="_9_nuages">9 nuages</string>
    <string name="_0">0</string>
    <string name="kaoha_nui">Kaoha nui</string>
    <string name="x">X</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="commencer">commencer</string>
    <string name="hae_en_marquisien">hae en marquisien</string>
    <string name="te_kuea">Te Kuea</string>
    <string name="te_apoipoi">Te Apoipoi</string>
    <string name="te_tau_numera">Te tau numera</string>
    <string name="te_tau_reta">Te tau reta</string>
    <string name="a_peni">a peni</string>
    <string name="piha">piha</string>
    <string name="e_manureva">e manureva</string>
    <string name="e_popo">e popo</string>
    <string name="e_poti">E POTI</string>
    <string name="e_mene">E MENE</string>
    <string name="e_pereo_o">E PEREO\'O</string>
    <string name="_8">8</string>
    <string name="_6" />
    <string name="sixfaux">6</string>
    <string name="potu_en_marquisien">potu</string>
    <string name="_3">3</string>
    <string name="_4faux">4faux</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
</resources>