<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CouleurActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="428dp"
        android:layout_marginTop="772dp"
        android:text="@string/Retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="22dp"
        android:text="@string/te_tau_vaitini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="37dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="49dp"
        android:text="@string/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button22"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="515dp"
        android:layout_marginBottom="166dp"
        android:text="@string/jaune"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button14"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginStart="397dp"
        android:layout_marginTop="82dp"
        android:text="@string/rose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button20"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="226dp"
        android:text="@string/mauve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button16"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginTop="226dp"
        android:layout_marginBottom="455dp"
        android:text="@string/noir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button13"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="82dp"
        android:text="@string/vert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button24"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginStart="397dp"
        android:layout_marginTop="514dp"
        android:text="@string/bleu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button21"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="49dp"
        android:text="@string/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button15"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginTop="368dp"
        android:text="@string/blanc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button11"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="599dp"
        android:text="@string/rouge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button23"
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="368dp"
        android:text="@string/marron"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-15dp" />


</androidx.constraintlayout.widget.ConstraintLayout>