<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="69dp"
        android:layout_height="23dp"
        android:text="Kaoha nui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        android:text="Te tau numera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="215dp"
        android:text="Te tau reta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="341dp"
        android:text="a peni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="51dp"
        android:text="@string/te_tau_vaitinitxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="96dp"
        android:layout_height="55dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="52dp"
        android:text="@string/nombrestxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="44dp"
        android:text="@string/formestxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>